--- a/utkal/src/app/addcustomer/addcustomer.component.html
+++ b/utkal/src/app/addcustomer/addcustomer.component.html
@@ -43,9 +43,9 @@
      </div>
     </div>
 	<div class="form-group">
-	<button type="button" class="btn btn-default btn-xs">
+	<!--<button type="button" class="btn btn-default btn-xs">
           <span class="glyphicon glyphicon-plus"></span> </button>
-	
+  -->
 	
       <label class="control-label col-md-2" style="text-align: right" 
       for="customerAddress">Address:</label>
@@ -55,22 +55,22 @@
         [(ngModel)]="addressC.address">
       </div>
     </div>
-    <!--
+    
 	<div class="form-group">
-      <label class="control-label col-md-2" for="secDeposit" 
+      <label class="control-label col-md-2" for="securityDeposit" 
       style="text-align: right">Security Deposit:</label>
       <div class="col-md-3" style="padding-left: 0px;">          
-        <input type="text" class="form-control" id="secDeposit" 
-        placeholder="Security Deposit" name="securityDeosit" 
-        [(ngModel)]="customer.securityDeosit">
+        <input type="text" class="form-control" id="securityDeposit" 
+        placeholder="Security Deposit" name="securityDeposit" 
+        [(ngModel)]="customer.securityDeposit">
       </div>
 	  
      <label class="control-label col-md-2" style="text-align: right" 
-     for="startDate">Start Date:</label>
+     for="activationDate">Start Date:</label>
      
  <div class='col-md-3' style="padding-left: 0px;">
-    <input type="date" class="form-control" id="startDate" 
-    [(ngModel)]="customer.startDate" name="startDate"/>
+    <input type="date" class="form-control" id="activationDate" 
+    [(ngModel)]="customer.activationDate" name="activationDate"/>
                    
                 </div>
       
@@ -92,7 +92,7 @@
       </div>
 	  
 	  
-    </div>-->
+    </div>
 	
     <div class="form-group">        
       <div class="col-md-offset-10 col-md-12">
