--- a/utkal/src/app/search-customer/search-customer.component.html
+++ b/utkal/src/app/search-customer/search-customer.component.html
@@ -7,82 +7,158 @@
         <label class="control-label col-sm-2" for="customerName">Customer Name:</label>
         <div class="col-sm-8">
         <input id="typeahead-basic" type="text" 
-          class="form-control" [(ngModel)]="model" 
+          class="form-control" [(ngModel)]="customer" 
           name="searchData"  [ngbTypeahead]="search"/>
         </div>
         </div>
       
         <div class="form-group">        
-          <div class="col-md-offset-10 col-md-12">
-            <button type="submit" class="btn btn-primary">Submit</button>
+          <div class="col-md-offset-9 col-md-12">
+            <button type="submit" class="btn btn-primary" 
+            (click)="getCustomerDetails()">Get Details</button>
          <button type="reset" class="btn btn-default">Reset</button>
           </div>
         </div>
       </form>
-<!--
 
-     <form class="form-horizontal" action="/action_page.php">
+
+<div  *ngIf="showSelected">
+
+      <form class="form-horizontal"  (ngSubmit)="updateCustomer()">
+                 
+           <div class="form-group">
+         
+             <label class="control-label col-md-2" style="text-align: right" for="customerName">Customer Name:</label>
+             <div class="col-md-3" style="padding-left: 0px;">
+               <input type="text" class="form-control" 
+               id="customerName" placeholder="Enter Name" name="customerName"
+               [(ngModel)]="customerObj.customerName" >
+             </div>
+           
+           
+            <label class="control-label col-md-2" style="text-align: right" for="customerMobileNumber">Mobile Number:</label>
+             <div class="col-md-3" style="padding-left: 0px;">          
+               <input type="number" class="form-control" id="customerMobileNumber" 
+               placeholder="Enter Mobile Number" name="customerMobileNumber"
+               [(ngModel)]="customerObj.customerMobileNumber">
+             </div>
+           
+           </div>
+         
+           <div class="form-group">
+            
+           </div>
+           <div class="form-group">
+          <label class="control-label col-md-2" style="text-align: right">Customer Type:</label>
+          <div class="col-md-3" style="padding-left: 0px;">
+             <select class="form-control col-md-3" id="sel1" name="customerType"
+             [(ngModel)]="customerObj.customerType">
+               <option>--Select--</option>
+           <option>Regular</option>
+               <option>Catering</option>
+             </select>
+            </div>
+            <label class="control-label col-md-2" style="text-align: right" 
+            for="activationDate">Start Date:</label>
+            
+        <div class='col-md-3' style="padding-left: 0px;">
+           <input disabled type="date" class="form-control" id="activationDate" 
+           [(ngModel)]="customerObj.activationDate" name="activationDate"/>
+                          
+                       </div>
+           </div>
+          <!--  <div class="form-group">
+         <button type="button" class="btn btn-default btn-xs">
+                 <span class="glyphicon glyphicon-plus"></span> </button>
+         
+         
+             <label class="control-label col-md-2" style="text-align: right" 
+             for="customerAddress">Address:</label>
+          <div class="col-md-3" style="padding-left: 0px;">          
+               <input type="text" class="form-control" id="customerAddress" 
+               placeholder="Enter Address" name="address"
+               [(ngModel)]="addressC.address">
+             </div>
+           </div>-->
+           <div class="form-group">
+              <label class="control-label col-md-2" for="securityDeposit" 
+              style="text-align: right">Security Deposit:</label>
+              <div class="col-md-3" style="padding-left: 0px;">          
+                <input disabled type="text" class="form-control" id="securityDeposit" 
+                placeholder="Security Deposit" name="securityDeposit" 
+                [(ngModel)]="customerObj.securityDeposit">
+              </div>
+              </div>
+              <div class="form-group">
+                  <label class="control-label col-md-2"  for="normalJarRate">Normal Jar Rate:</label>
+                  <div class="col-md-3" style="padding-left: 0px;">          
+                    <input type="number" class="form-control" id="normalJarRate"  
+                    name="normalJarRate" [(ngModel)]="customerObj.normalJarRate">
+                  </div>
+                
+                 <label class="control-label col-md-2" style="text-align: right" 
+                 for="coldJarRate">Cold Jar Rate:</label>
+                  <div class="col-md-3" style="padding-left: 0px;">          
+                    <input type="number" class="form-control" id="coldJarRate"
+                      name="coldJarRate" [(ngModel)]="customerObj.coldJarRate">
+                  </div>
+                 </div>
+                
+
+           <div class="form-group">        
+             <div class="col-md-offset-8 col-md-12">
+               <button type="submit" class="btn btn-primary">Update</button>
+            <button type="reset" class="btn btn-default">Reset</button>
+            <button type="button" class="btn btn-warning" 
+            data-toggle="modal"  data-target="#deActiveCustomerModal">De-activate</button>
+             </div>
+           </div>
+         </form>
+
+        </div>
+
+
        
-        <div class="form-group">
-         
-        </div>
-        <div class="form-group">
-       <label class="control-label col-sm-2">Customer Type:</label>
-       <div class="col-sm-2">
-          <select class="form-control col-sm-2" id="sel1">
-            <option>--Select--</option>
-        <option>Regular</option>
-            <option>Catering</option>
-          </select>
-         </div>
-        </div>
-      <div class="form-group">
-      <button type="button" class="btn btn-default btn-xs">
-              <span class="glyphicon glyphicon-plus"></span> </button>
-      
-      
-          <label class="control-label col-sm-2" for="customerMobileNumber">Address:</label>
-          <div class="col-sm-2">          
-            <input type="text" class="form-control" id="customerMobileNumber" placeholder="Enter Address" name="customerMobileNumber">
-          </div>
-        </div>
-      <div class="form-group">
-          <label class="control-label col-sm-2" for="customerMobileNumber">Security Deposit:</label>
-          <div class="col-sm-2">          
-            <input type="text" class="form-control" id="customerMobileNumber" placeholder="Security Deposit" name="customerMobileNumber">
-          </div>
-        
-         <label class="control-label col-sm-2" for="customerMobileNumber">Start Date:</label>
-         
-     <div class='input-group date col-sm-2' id='datetimepicker1'>
-        <input type="date" class="form-control col-sm-2" />
-                       
-                    </div>
-          
-        </div>
-      
-      
-      <div class="form-group">
-          <label class="control-label col-sm-2" for="customerMobileNumber">Normal Jar Rate:</label>
-          <div class="col-sm-2">          
-            <input type="number" class="form-control" id="customerMobileNumber"  name="customerMobileNumber">
-          </div>
-        
-         <label class="control-label col-sm-2" for="customerMobileNumber">Cold Jar Rate:</label>
-          <div class="col-sm-2">          
-            <input type="number" class="form-control" id="customerMobileNumber"  name="customerMobileNumber">
-          </div>
-        
-        
-        </div>
-      
-        <div class="form-group">        
-          <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-primary">Submit</button>
-         <button type="reset" class="btn btn-default">Cancel</button>
-          </div>
-        </div>
-      </form>-->
     
       </fieldset>
-      </div>
+      </div> 
+      <div class="modal fade" id="deActiveCustomerModal" role="dialog">
+          <div class="modal-dialog modal-lg">
+          
+            <!-- Modal content-->
+            <div class="modal-content">
+              <div class="" style="padding: 15px">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">De-Activate Customer</h4>
+             <hr>
+              </div>
+              <div class="modal-body">
+                  <div   class="form-group">
+                      <label class="control-label col-md-2" for="returnSecurityDeposit" 
+                      style="text-align: right">Return Deposit:</label>
+                      <div class="col-md-3" style="padding-left: 0px;">          
+                        <input  type="text" class="form-control" id="returnSecurityDeposit" 
+                        placeholder="Security Deposit Return" name="returnSecurityDeposit" 
+                        [(ngModel)]="customerObj.returnSecurityDeposit">
+                      </div>
+                      <label class="control-label col-md-2" style="text-align: right" 
+                      for="deActivattionDate">Close Date:</label>
+                      
+                  <div class='col-md-3' style="padding-left: 0px;">
+                     <input  type="date" class="form-control" id="deActivattionDate" 
+                     [(ngModel)]="customerObj.deActivattionDate" name="deActivattionDate"/>
+                                    
+                                 </div>
+                      </div>
+              </div>
+              <div class="" style="padding: 15px;text-align: right">
+                  <button type="button" (click)="deactivateCustomer()" class="btn btn-primary" data-dismiss="modal">Save</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+            
+          </div>
+        </div>
+        
+        
+      
